# qttest

./: .gitignore  .travis.yml  CMakeLists.txt  CarouselEffect.qml  CustomTabButton.qml  EllipseType.qml  GameModel.qml  IconRect.qml  ModelType.qml  Page_Main.qml  Page_Store.qml  Username.qml  main.qml  qml.qrc
script/QML/: Page1.qmlc  Page1Form.ui.qmlc  main.qml  main.qmlc
src/: WatchDirPath.h.in  main.cpp
